Updated footer to include link to repo. Worked on footer styling.

--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
                 <div class="container">
                     <div class="columns">
                         <div class="column">
+                            <hr>
                             <a href="https://bulma.io">
                                 <img src="https://bulma.io/images/made-with-bulma.png" alt="Made with Bulma" width="256" height="48">
                             </a>
                         </div>
                         <div class="column">
+                            <hr>
                             <p>
                                 This website is licensed under a 
                                 <a href="https://www.gnu.org/licenses/agpl-3.0.en.html">The GNU Affero General Public 3.0 License</a>.
@@ -65,6 +67,7 @@
                             <img alt="GNU Affero General Public 3.0 License" src="https://www.gnu.org/graphics/agplv3-155x51.png" />
                         </div>
                         <div class="column">
+                            <hr>
                             <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
                                 <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" />
                             </a>
@@ -91,7 +94,18 @@
                                 here</a>.
                         </div>
                         <div class="column">
-                            <h1 class="subtitle is-pulled-left">
+                            <hr>
+                            <h1 class="subtitle">
+                                This page is open source. Noticed a typo? Or something unclear?
+                                <br>
+                                <a href="https://github.com/Tensounder54/Tensounder54.github.io">
+                                    Improve this page on GitHub.
+                                </a>
+                            </h1>
+                        </div>
+                        <div class="column">
+                            <hr>
+                            <h1 class="subtitle">
                                 For legal enquiries please send an email to
                                 <a href="mailto:t54@tutanota.com">t54@tutanota.com</a>.
                             </h1>
@@ -100,5 +114,12 @@
                 </div>
             </div>
         </section>
+        <div id="hostBanner">
+            <figure class="image is-128x128" >
+                <a class= href="https://github.com/Tensounder54/Tensounder54.github.io">
+                    <img src="http://datampi.org/images/hosted-on-github.png" alt="Hosted On GitHub">
+                </a>
+            </figure>
+        </div>
     </body>
 </html>
