Added no decay site and formmated to fit main site. Added Staff section to site.

--- a/reddit/ocg/modapp-august-2019/index.html
+++ b/reddit/ocg/modapp-august-2019/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
-		<title>T54's 30 Days of Competitive Overwatch</title>
+		<title>Moderator Application - /r/OCG - August 2019</title>
 		<link rel="icon" href="https://d1mt9jmphk9kik.cloudfront.net/teamdignitas/image1525903511.png">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
