Altered content licence in legal for no decay to be accurate.

--- a/discord/no-decay/index.html
+++ b/discord/no-decay/index.html
@@ -712,7 +712,7 @@
                             </a>
                             <br />
                             <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Dataset" property="dct:title" rel="dct:type">
-                                T54's 30 Days of Competitive Overwatch 
+                                No Decay Website 
                             </span>
                             by 
                             <a xmlns:cc="http://creativecommons.org/ns#" href="https://tensounder54.github.io/secret/30doc/" property="cc:attributionName" rel="cc:attributionURL">
@@ -723,14 +723,14 @@
                                 Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
                             <br />
                             Based on  
-                            <a xmlns:dct="http://purl.org/dc/terms/" href="https://drive.google.com/drive/folders/1vg758RMFpVmcQVKCTHjtC0i6sA_2R6JI?usp=sharing" rel="dct:source">
+                            <a xmlns:dct="http://purl.org/dc/terms/" href="30doc" rel="dct:source">
                                 this
                             </a>
                             work.
-                            <br />
+                            <!-- <br />
                             Permissions beyond the scope of this license may be available  
                             <a xmlns:cc="http://creativecommons.org/ns#" href="mailto:t54@tutanota.com?subject=Use%20of%2030doc%20Content%20Outside%20of%20Licence&body=Hi%20there%20T54!%0A%0AI'd%20like%20to%20use%20the%20content%20of%2030doc%20outside%20of%20the%20bounds%20of%20the%20CC-BY-NC-SA%20license.%20%0A%0A%3CAdd%20you%20own%20text%20here%3E%20%0A%0AHave%20an%20amazing%20day!%20%0A%0A%3CInsert%20name%20here%3E" rel="cc:morePermissions">
-                                here</a>.
+                                here</a>. -->
                         </div>
                         <div class="column">
                             <hr>
