Fixed issue with gihub link banner where it would not correctly link to the page. Added inputs for OCG mod application.

--- a/discord/no-decay/30doc/index.html
+++ b/discord/no-decay/30doc/index.html
@@ -116,7 +116,7 @@
         </section>
         <div id="hostBanner">
             <figure class="image is-128x128" >
-                <a class= href="https://github.com/Tensounder54/Tensounder54.github.io">
+                <a href="https://github.com/Tensounder54/Tensounder54.github.io">
                     <img src="http://datampi.org/images/hosted-on-github.png" alt="Hosted On GitHub">
                 </a>
             </figure>
