--- a/reddit/ocg/modapp-august-2019/index.html
+++ b/reddit/ocg/modapp-august-2019/index.html
@@ -2,15 +2,158 @@
 <html lang="en-US">
 	<head>
 		<title>Moderator Application - /r/OCG - August 2019</title>
-		<link rel="icon" href="https://d1mt9jmphk9kik.cloudfront.net/teamdignitas/image1525903511.png">
+		<link rel="icon" href="https://b.thumbs.redditmedia.com/t1-Y5E41kLWC6U81csBC0evbczbihoCBb9y_IEZbrkk.png">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../../../resources/css/libraries/bulma.min.css">
-        <link rel="stylesheet" href="../../../resources/css/main.css">
+        <link rel="stylesheet" href="../../../resources/css/modApp.css">
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><!-- integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
-		<script src="../../../resources/js/main.js"></script>
+		<script src="../../../resources/js/modApp.js"></script>
 	</head>
 	<body>
+        <section id="header" class="hero has-background-white-ter is-fullheight">
+            <div class="hero-body">
+                <div class="container">
+                    <h1 class="title is-2">
+                        <a href="//old.reddit.com/r/ocg">/r/OverwatchCustomGames</a> Moderator Application - August 2019
+                    </h1>
+                    <hr class="has-background-black-ter">
+                    <h2 class="subtitle is-5">
+                        Hi there<i>!</i> Thanks for your interest in applying to become a moderator for <a href="//old.reddit.com/r/ocg">/r/OverwatchCustomGames</a>. 
+                        Please complete the below form. When you hit the submit button at the bottom of the form, you will be redirected to the moderator message form. 
+                        All of the informationt that you have entered there will be filled out automaticaly. All you need to do is hit <a class="button is-light is-marginless">send</a>
+                        and it will be sent off to us. If you have any problems please feel free to <a href="https://www.reddit.com/message/compose?to=%2Fr%2FOverwatchCustomGames">message the moderators</a>
+                        for help. Thanks again for your interest. 
+                    </h2>
+                    <h2 class="subtitle is-4 has-text-info is-italic has-text-weight-semibold is-family-secondary"><a>The /r/OCG moderators.</a></h2>
+                </div>
+            </div>
+        </section>
+        <section id="formMain" class="hero is-fullheight is-info">
+            <div class="hero-body">
+                <div class="container">
+                    <div class="columns">
+                        <div class="column is-one-half">
+                            <hr>
+                            <h2 class="subtitle is-2">About You</h2>
+                            <div class="field">
+                                <label class="label"><span class="has-text-danger">*</span> Reddit Username</label>
+                                <div class="control">
+                                    <input class="input" type="text" placeholder="Reddit Username">
+                                </div>
+                             </div>
+                            <div class="field">
+                                <label class="label"><span class="has-text-danger">*</span> Discord Username</label>
+                                <div class="control">
+                                    <input class="input" type="text" placeholder="Discord Username">
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label">What timezone are you in?</label>
+                                <div class="control">
+                                    <input class="input" type="text" placeholder="BST, EST, JST, etc...">
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label"><span class="has-text-danger">*</span> How many hours do you spend on <span class="has-text-orangered">Reddit</span>/<span class="has-text-blurple">Discord</span> a day?</label>
+                                <div class="control">
+                                    <div class="select">
+                                    <select>
+                                        <option>&lt;select-number-of-hours&gt;</option>
+                                        <option>0-2</option>
+                                        <option>2-4</option>
+                                        <option>4-6</option>
+                                        <option>6-10</option>
+                                        <option>10+</option>
+                                    </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label">Do you spend more time on <span class="has-text-blurple">Discord</span> or <span class="has-text-orangered">Reddit</span>?</label>
+                                <div class="control">
+                                    <label class="radio has-text-grey-darker">
+                                        <input type="radio" name="answer">
+                                        <span class="has-text-blurple">Discord</span>
+                                    </label>
+                                    <label class="radio has-text-grey-darker">
+                                        <input type="radio" name="answer">
+                                        <span class="has-text-orangered">Reddit</span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label">What is your pesonality type?</label>
+                                <div class="columns">
+                                    <div class="column is-three-quarters">
+                                        <div class="control">
+                                            <input class="input" type="text" placeholder="Enter personality type here...">
+                                        </div>
+                                    </div>
+                                    <div class="column is-one-quarter">
+                                        <a class="button is-primary" href="https://www.16personalities.com/free-personality-test">Take the test.</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label">What's your favorite development language?</label>
+                                <div class="control">
+                                    <div class="select">
+                                    <select>
+                                        <option>&lt;select-language&gt;</option>
+                                        <option>WebDev</option>
+                                        <option>Python</option>
+                                        <option>C#</option>
+                                        <option>C++</option>
+                                        <option>Asembly Language</option>
+                                        <option>Kotlin</option>
+                                        <option>Lua</option>
+                                    </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </div>
+                        <div class="column is-one-half is-hidden-mobile">
+                            <div class="columns is-mobile is-multiline is-centered">
+                                <div class="column is-one-third">
+                                    <img class="ocg-icons" src="https://b.thumbs.redditmedia.com/NcLAaccxoJ2tO7TcSxgEx0HwSsprbM8pN97SzZwvXWA.png" alt="/r/OverwatchCustomGames Icons">
+                                </div>
+                                <div class="column is-one-third">
+                                    <img class="ocg-icons" src="https://b.thumbs.redditmedia.com/NcLAaccxoJ2tO7TcSxgEx0HwSsprbM8pN97SzZwvXWA.png" alt="/r/OverwatchCustomGames Icons">
+                                </div>
+                                <div class="column is-one-third">
+                                    <img class="ocg-icons" src="https://b.thumbs.redditmedia.com/NcLAaccxoJ2tO7TcSxgEx0HwSsprbM8pN97SzZwvXWA.png" alt="/r/OverwatchCustomGames Icons">
+                                </div>
+                                <div class="column is-one-third">
+                                    <img class="ocg-icons" src="https://b.thumbs.redditmedia.com/NcLAaccxoJ2tO7TcSxgEx0HwSsprbM8pN97SzZwvXWA.png" alt="/r/OverwatchCustomGames Icons">
+                                </div>
+                                <div class="column is-one-third">
+                                    <img class="ocg-icons" src="https://b.thumbs.redditmedia.com/NcLAaccxoJ2tO7TcSxgEx0HwSsprbM8pN97SzZwvXWA.png" alt="/r/OverwatchCustomGames Icons">
+                                </div>
+                                <div class="column is-one-third">
+                                    <img class="ocg-icons" src="https://b.thumbs.redditmedia.com/NcLAaccxoJ2tO7TcSxgEx0HwSsprbM8pN97SzZwvXWA.png" alt="/r/OverwatchCustomGames Icons">
+                                </div>
+                                <div class="column is-one-third">
+                                    <img class="ocg-icons" src="https://b.thumbs.redditmedia.com/NcLAaccxoJ2tO7TcSxgEx0HwSsprbM8pN97SzZwvXWA.png" alt="/r/OverwatchCustomGames Icons">
+                                </div>
+                                <div class="column is-one-third">
+                                    <img class="ocg-icons" src="https://b.thumbs.redditmedia.com/NcLAaccxoJ2tO7TcSxgEx0HwSsprbM8pN97SzZwvXWA.png" alt="/r/OverwatchCustomGames Icons">
+                                </div>
+                                <div class="column is-one-third">
+                                    <img class="ocg-icons" src="https://b.thumbs.redditmedia.com/NcLAaccxoJ2tO7TcSxgEx0HwSsprbM8pN97SzZwvXWA.png" alt="/r/OverwatchCustomGames Icons">
+                                </div>
+                            </div>
+                            <div class="columns is-mobile is-multiline is-centered">
+                                <div class="column is-one-third">
+                                    <img src="https://b.thumbs.redditmedia.com/SM-GIh0wjFA9loK3TC0v0R0E8Vj35Ujf3NC9zOCygho.png" alt="/r/OverwatchCustomGames Wordmark">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="footer" class="hero is-fullheight is-primary is-bold">
             <div class="hero-body">
                 <div class="container">
@@ -73,7 +216,7 @@
         </section>
         <div id="hostBanner">
             <figure class="image is-128x128" >
-                <a class= href="https://github.com/Tensounder54/Tensounder54.github.io">
+                <a href="https://github.com/Tensounder54/Tensounder54.github.io">
                     <img src="http://datampi.org/images/hosted-on-github.png" alt="Hosted On GitHub">
                 </a>
             </figure>
