Updated data on no decay site. Added page for no decay oct torny. Rrestuctured css directories and updated index files to reflect this.

--- a/discord/no-decay/index.html
+++ b/discord/no-decay/index.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="../../resources/css/libraries/bulma.min.css">
-		<link rel="stylesheet" href="../../resources/css/noDecaySite.css">
+		<link rel="stylesheet" href="../../resources/css/discord/no-decay/noDecaySite.css">
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><!-- integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
 		<script src="../../resources/js/noDecaySite.js"></script>
 	</head>
@@ -104,7 +104,7 @@
                                     <div class="content">
                                         <p class="subtitle is-6 has-text-dark"><b>SR range:</b> 2000-2500 SR (new applicants must be &lt;2500 SR)</p>
                                         <p>
-                                            So we are the 1st/8th/6th No Decay team. We're just your friendly neighborhood Rh1noseri.
+                                            So we are the 1st<del>/8th/6th</del>> No Decay team. We're just your friendly neighborhood Rh1noseri.
                                         </p>
                                         <a><b>General Manager:</b> <code>T54</code></a>
                                         <br>
@@ -145,7 +145,7 @@
                                         <br>
                                         <a><b>Staff Contact:</b> <code>JellyBean</code></a>
                                         <br>
-                                        <a><b>Coach:</b> <code>finiesta</code></a>
+                                        <a><b>Coach:</b> <code>Jeremy</code></a>
                                     </div>
                                 </div>
                             </div>
@@ -171,11 +171,11 @@
                                     <div class="content">
                                         <p class="subtitle is-6 has-text-dark"><b>SR range:</b> 1500-2700 SR (new applicants must be &lt;2500 SR)</p>
                                         <p>Team Ramen is a relatively new team, looking for players to fill the roster.</p>
-                                        <a><b>Captain:</b> <code>RydanUK</code></a>
+                                        <a><b>Captain:</b> <code>Dani</code></a>
                                         <br>
-                                        <a><b>Staff Contact:</b> <code>Noirox</code></a>
+                                        <a><b>Staff Contact:</b> <code>Jam</code></a>
                                         <br>
-                                        <a><b>Coach:</b> <!--<code></code>--></a>
+                                        <a><b>Coach:</b> <code>Blu3berry</code>, <code>Crappy</code>, and <code>Coolfire</code></a>
                                     </div>
                                 </div>
                             </div>
@@ -263,9 +263,9 @@
                                             <p>Team Sleepy Birds is a relatively new team, looking for players to fill the roster and improve. We want to play Open Division in the future.</p>
                                             <a><b>Captain:</b> <code>Knildropi</code></a>
                                             <br>
-                                            <a><b>Staff Contact:</b> <code>Noirox</code></a>
+                                            <a><b>Staff Contact:</b> <code>T54</code></a>
                                             <br>
-                                            <a><b>Coach:</b> <code>Noirox</code>, <code>finiesta</code></a>
+                                            <a><b>Coach:</b> <code>SodiePops</code></a>
                                         </div>
                                     </div>
                                 </div>
@@ -383,7 +383,7 @@
                                             </article>
                                             <article class="tile is-child notification is-pulled-right is-head">
                                                 <p class="title">Head Coaches</p>
-                                                <p class="subtitle">Generaly Coaches Everything...</p>
+                                                <p class="subtitle">Generally Coaches Everything...</p>
                                                 <div class="columns is-multiline is-mobile">
                                                     <div class="column is-one-third">
                                                         <img class="is-rounded staff-icon" src="https://cdn.discordapp.com/avatars/267419061699215360/a460a82beb837077572cdc350d2b338e.png" alt="finiesta#2479">
@@ -520,7 +520,7 @@
                                                                 <div class="content">
                                                                     <p class="subtitle is-6 has-text-dark"><b>SR:</b> 2900</p>
                                                                     <p>
-                                                                        Works with <code>crossfade#5886</code>, <code>Syntax (Josh B)#2481</code> and <code>finiesta#2479</code> to manage the coaches. Coaches for Team Sleepy 6irds.
+                                                                        Works with <code>crossfade#5886</code>, <code>Syntax (Josh B)#2481</code> and <code>finiesta#2479</code> to manage the coaches.
                                                                     </p>
                                                                     <a><b>Teams:</b></a>
                                                                     <br>
