--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<link rel="icon" href="https://d1mt9jmphk9kik.cloudfront.net/teamdignitas/image1525903511.png">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../../../resources/css/libraries/bulma.min.css">
-        <link rel="stylesheet" href="../../../resources/css/main.css">
+        <link rel="stylesheet" href="resources/css/libraries/bulma.min.css">
+        <link rel="stylesheet" href="resources/css/main.css">
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><!-- integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
-		<script src="../../../resources/js/main.js"></script>
+		<script src="resources/js/main.js"></script>
 	</head>
 	<body>
         <section id="footer" class="hero is-fullheight is-primary is-bold">
