--- a/reddit/ocg/modapp-august-2019/index.html
+++ b/reddit/ocg/modapp-august-2019/index.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../../../resources/css/libraries/bulma.min.css">
-        <link rel="stylesheet" href="../../../resources/css/modApp.css">
+        <link rel="stylesheet" href="../../../resources/css/reddit/modApp.css">
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script><!-- integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
 		<script src="../../../resources/js/modApp.js"></script>
 	</head>
