fixed spesifics on no decay main site. Made tordements page fully  mobile responsive.

--- a/discord/no-decay/index.html
+++ b/discord/no-decay/index.html
@@ -588,7 +588,7 @@
                                                                 <div class="content">
                                                                     <p class="subtitle is-6 has-text-dark"><b>SR:</b> 3200</p>
                                                                     <p>
-                                                                        Give some great advice to the other staff. Helps in alot of areas. Sometimes works the coaches and on PUGs.
+                                                                        Give some great advice to the other staff. If you want players or coaches, this is your man. (He works in recurtement.) Sometimes works the coaches and on PUGs. 
                                                                     </p>
                                                                     <a><b>Teams:</b></a>
                                                                     <br>
