--- a/discord/no-decay/tournaments/october-2019/index.html
+++ b/discord/no-decay/tournaments/october-2019/index.html
@@ -32,7 +32,7 @@
                 <div class="container">
                     <hr>
                     <div class="columns">
-                        <div class="column is-one-half">
+                        <div class="column is-one-half has-text-justified">
                             <h1 class="title is-2">General Rules</h1>
                             <hr>
                             <ul>
@@ -59,7 +59,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="column is-one-half">
+                        <div class="column is-one-half has-text-justified">
                             <h1 class="title is-2">Lobby Settings</h1>
                             <hr>
                             <ul>
@@ -148,9 +148,10 @@
                 <div class="container">
                     <h1 class="title is-2">Sign-up Form</h1>
                     <hr>
-                    <div class="columns is-mobile is-centered">
+                    <div class="columns is-centered">
                         <div class="column is-half">
-                            <iframe id="tournament-form" src="https://docs.google.com/forms/d/e/1FAIpQLSdLmgAbJJpxRnGGGQsm7iYE-QQckhNlluEY_8sIYZwOB21eLA/viewform?embedded=true" width="640" height="1358" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                            <iframe id="tournament-form" class="is-hidden-mobile" src="https://docs.google.com/forms/d/e/1FAIpQLSdLmgAbJJpxRnGGGQsm7iYE-QQckhNlluEY_8sIYZwOB21eLA/viewform?embedded=true" width="640" height="1358" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                            <a class="button is-info is-large is-fullwidth is-hidden-tablet" href="https://forms.gle/P4gE7cvosf1g9TAy7">Apply Here<i>!</i></a>
                         </div>
                     </div>
                 </div>
@@ -170,7 +171,7 @@
                     <div class="columns">
                         <div class="column">
                             <hr>
-                            <a href="https://bulma.io">
+                            <a href="https://bulma.io"  target="_blank">
                                 <img src="https://bulma.io/images/made-with-bulma.png" alt="Made with Bulma" width="256" height="48">
                             </a>
                         </div>
@@ -178,13 +179,13 @@
                             <hr>
                             <p>
                                 This website is licensed under a 
-                                <a href="https://www.gnu.org/licenses/agpl-3.0.en.html">The GNU Affero General Public 3.0 License</a>.
+                                <a href="https://www.gnu.org/licenses/agpl-3.0.en.html"  target="_blank">The GNU Affero General Public 3.0 License</a>.
                             </p>
                             <img alt="GNU Affero General Public 3.0 License" src="https://www.gnu.org/graphics/agplv3-155x51.png" />
                         </div>
                         <div class="column">
                             <hr>
-                            <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
+                            <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"  target="_blank">
                                 <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" />
                             </a>
                             <br />
@@ -192,15 +193,15 @@
                                 No Decay Website 
                             </span>
                             by 
-                            <a xmlns:cc="http://creativecommons.org/ns#" href="https://tensounder54.github.io/secret/30doc/" property="cc:attributionName" rel="cc:attributionURL">
+                            <a xmlns:cc="http://creativecommons.org/ns#" href="https://tensounder54.github.io/secret/30doc/"  target="_blank" property="cc:attributionName" rel="cc:attributionURL">
                                 Tensounder54
                             </a>
                             is licensed under a 
-                            <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
+                            <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">
                                 Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
                             <br />
                             Based on  
-                            <a xmlns:dct="http://purl.org/dc/terms/" href="../../30doc" rel="dct:source">
+                            <a xmlns:dct="http://purl.org/dc/terms/" href="../../30doc"  target="_blank" rel="dct:source">
                                 this
                             </a>
                             work.
@@ -214,7 +215,7 @@
                             <h1 class="subtitle">
                                 This page is open source. Noticed a typo? Or something unclear?
                                 <br>
-                                <a href="https://github.com/Tensounder54/Tensounder54.github.io">
+                                <a href="https://github.com/Tensounder54/Tensounder54.github.io"  target="_blank">
                                     Improve this page on GitHub.
                                 </a>
                             </h1>
@@ -232,21 +233,27 @@
         </section>
         <div id="hostBanner">
             <figure class="image is-128x128" >
-                <a href="https://github.com/Tensounder54/Tensounder54.github.io">
+                <a href="https://github.com/Tensounder54/Tensounder54.github.io" target="_blank">
                     <img src="http://datampi.org/images/hosted-on-github.png" alt="Hosted On GitHub">
                 </a>
             </figure>
         </div>
         <div id="menu">
             <div class="container">
-                <ul>
-                    <!-- <li><a href="" class="button is-unselectable"><b>&#8666;</b></a></li> -->
-                    <li><a href="../../" class="button is-warning is-unselectable has-text-grey-light is-flipped"><b>&#10132;</b></a></li>
-                    <li><a href="#general-lobby-info" class="button is-info is-unselectable">General & Lobby Info</a></li>
-                    <li><a href="#team-match-info" class="button is-link is-unselectable">Team & Match Info</a></li>
-                    <li><a href="#sign-up" class="button is-success is-unselectable">Sign-up</a></li>
-                    <li><a href="#footer" class="button is-primary is-unselectable">Legal</a></li>
-                </ul>
+                <div class="columns is-mobile">
+                    <div class="column is-one-half">
+                            <ul>
+                                <li><a href="../../" target="_blank" id="backArrow" class="button is-warning is-unselectable has-text-grey-light is-flipped"><b>&#10132;</b></a></li>
+                                <li><a href="#general-lobby-info" class="button is-info is-unselectable">General & Lobby Info</a></li>
+                                <li><a href="#team-match-info" class="button is-link is-unselectable">Team & Match Info</a></li>
+                                <li><a href="#sign-up" class="button is-success is-unselectable">Sign-up</a></li>
+                                <li><a href="#footer" class="button is-primary is-unselectable">Legal</a></li>
+                            </ul>
+                    </div>
+                    <div class="column is-one-half is-hidden-tablet">
+                        <a class="button is-medium is-hovered is-static is-paddingless is-rounded"><b>&equiv;</b></a>
+                    </div>
+                </div>
             </div>
         </div> 
     </body>
