ajusted size of buger on tordement site for no decay.

--- a/discord/no-decay/tournaments/october-2019/index.html
+++ b/discord/no-decay/tournaments/october-2019/index.html
@@ -242,16 +242,16 @@
             <div class="container">
                 <div class="columns is-mobile">
                     <div class="column is-one-half">
-                            <ul>
-                                <li><a href="../../" target="_blank" id="backArrow" class="button is-warning is-unselectable has-text-grey-light is-flipped"><b>&#10132;</b></a></li>
-                                <li><a href="#general-lobby-info" class="button is-info is-unselectable">General & Lobby Info</a></li>
-                                <li><a href="#team-match-info" class="button is-link is-unselectable">Team & Match Info</a></li>
-                                <li><a href="#sign-up" class="button is-success is-unselectable">Sign-up</a></li>
-                                <li><a href="#footer" class="button is-primary is-unselectable">Legal</a></li>
-                            </ul>
+                        <ul>
+                            <li><a href="../../" target="_blank" id="backArrow" class="button is-warning is-unselectable has-text-grey-light is-flipped"><b>&#10132;</b></a></li>
+                            <li><a href="#general-lobby-info" class="button is-info is-unselectable">General & Lobby Info</a></li>
+                            <li><a href="#team-match-info" class="button is-link is-unselectable">Team & Match Info</a></li>
+                            <li><a href="#sign-up" class="button is-success is-unselectable">Sign-up</a></li>
+                            <li><a href="#footer" class="button is-primary is-unselectable">Legal</a></li>
+                        </ul>
                     </div>
                     <div class="column is-one-half is-hidden-tablet">
-                        <a class="button is-medium is-hovered is-static is-paddingless is-rounded"><b>&equiv;</b></a>
+                        <a class="button is-medium is-hovered is-static is-size-4"><b>&equiv;</b></a>
                     </div>
                 </div>
             </div>
