Fixed justification of lists of text on the october 2019 tornaments for no-decay.

--- a/discord/no-decay/tournaments/october-2019/index.html
+++ b/discord/no-decay/tournaments/october-2019/index.html
@@ -49,13 +49,11 @@
                                 </li>
                                 <li>You are entitled to <b>MAXIMUM</b> five minutes between maps</li>
                                 <li>
-                                    You are entitled to <b>MAXIMUM</b> five minutes pause time throughout the map. Any time more than this means you will have to resume the match with the 
-                                    members you currently have ready (meaning if you only have 5 players you can sub one of your subs in or play 5v6)
+                                    You are entitled to <b>MAXIMUM</b> five minutes pause time throughout the map. Any time more than this means you will have to resume the match with the members you currently have ready (meaning if you only have 5 players you can sub one of your subs in or play 5v6)
                                 </li>
                                 <li>If anybody needs to join the lobby, do so when back on the lobby screen rather than in the middle of the match</li>
                                 <li>
-                                    Spectators and substitutes are not allowed to communicate to players mid-map in both text chat and discord. 
-                                    You are able to talk within your pause time or in the lobby
+                                    Spectators and substitutes are not allowed to communicate to players mid-map in both text chat and discord. You are able to talk within your pause time or in the lobby
                                 </li>
                             </ul>
                         </div>
@@ -126,12 +124,10 @@
                                 <li>3maps will be played
                                 <li>The first map will be Ilios
                                 <li> 
-                                    Second map will be Hollywood or Eichenwalde. The team that lost the previous map decides which map they want to play out of the two and 
-                                    if they want to attack or defend first
+                                    Second map will be Hollywood or Eichenwalde. The team that lost the previous map decides which map they want to play out of the two and if they want to attack or defend first
                                 </li>
                                 <li>
-                                    Third map will be Junkertown or Rialto. The team that lost the previous map decides which map they want to play out of the two and if 
-                                    they want to attack or defend first 
+                                    Third map will be Junkertown or Rialto. The team that lost the previous map decides which map they want to play out of the two and if they want to attack or defend first 
                                 </li>
                             </ul>
                         </div>
@@ -152,6 +148,7 @@
                         <div class="column is-half">
                             <iframe id="tournament-form" class="is-hidden-mobile" src="https://docs.google.com/forms/d/e/1FAIpQLSdLmgAbJJpxRnGGGQsm7iYE-QQckhNlluEY_8sIYZwOB21eLA/viewform?embedded=true" width="640" height="1358" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                             <a class="button is-info is-large is-fullwidth is-hidden-tablet" href="https://forms.gle/P4gE7cvosf1g9TAy7">Apply Here<i>!</i></a>
+                            <div style="clear: both"></div>
                         </div>
                     </div>
                 </div>
