--- a/reddit/ocg/modapp-august-2019/index.html
+++ b/reddit/ocg/modapp-august-2019/index.html
@@ -11,31 +11,37 @@
 		<script src="../../../resources/js/modApp.js"></script>
 	</head>
 	<body>
-        <section id="header" class="hero has-background-white-ter is-fullheight">
+        <section id="header" class="hero is-info is-fullheight">
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title is-2">
                         <a href="//old.reddit.com/r/ocg">/r/OverwatchCustomGames</a> Moderator Application - August 2019
                     </h1>
-                    <hr class="has-background-black-ter">
+                    <hr>
                     <h2 class="subtitle is-5">
                         Hi there<i>!</i> Thanks for your interest in applying to become a moderator for <a href="//old.reddit.com/r/ocg">/r/OverwatchCustomGames</a>. 
                         Please complete the below form. When you hit the submit button at the bottom of the form, you will be redirected to the moderator message form. 
-                        All of the informationt that you have entered there will be filled out automaticaly. All you need to do is hit <a class="button is-light is-marginless">send</a>
+                        All of the informationt that you have entered there will be filled out automaticaly. All you need to do is hit <code class="is-rounded">send</code>
                         and it will be sent off to us. If you have any problems please feel free to <a href="https://www.reddit.com/message/compose?to=%2Fr%2FOverwatchCustomGames">message the moderators</a>
                         for help. Thanks again for your interest. 
                     </h2>
-                    <h2 class="subtitle is-4 has-text-info is-italic has-text-weight-semibold is-family-secondary"><a>The /r/OCG moderators.</a></h2>
+                    <h2 class="subtitle is-4 has-text-link is-italic has-text-weight-semibold is-family-secondary"><a>The /r/OCG moderators.</a></h2>
+                    <br>
                 </div>
             </div>
         </section>
-        <section id="formMain" class="hero is-fullheight is-info">
+        <section class="hero is-link is-italic">
             <div class="hero-body">
                 <div class="container">
-                    <div class="columns">
+                    <h2 class="subtitle is-2 has-text-centered"><u>About You</u></h2>
+                </div>
+            </div>
+        </section>
+        <section id="aboutYouForm" class="hero is-fullheight has-background-white-ter">
+            <div class="hero-body">
+                <div class="container">
+                    <div class="columns is-variable is-8">
                         <div class="column is-one-half">
-                            <hr>
-                            <h2 class="subtitle is-2">About You</h2>
                             <div class="field">
                                 <label class="label"><span class="has-text-danger">*</span> Reddit Username</label>
                                 <div class="control">
@@ -46,6 +52,12 @@
                                 <label class="label"><span class="has-text-danger">*</span> Discord Username</label>
                                 <div class="control">
                                     <input class="input" type="text" placeholder="Discord Username">
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label"><span class="has-text-danger">*</span> How old are you?</label>
+                                <div class="control">
+                                    <input class="input" type="text" placeholder="Age">
                                 </div>
                             </div>
                             <div class="field">
@@ -83,36 +95,13 @@
                                 </div>
                             </div>
                             <div class="field">
-                                <label class="label">What is your pesonality type?</label>
-                                <div class="columns">
-                                    <div class="column is-three-quarters">
-                                        <div class="control">
-                                            <input class="input" type="text" placeholder="Enter personality type here...">
-                                        </div>
-                                    </div>
-                                    <div class="column is-one-quarter">
-                                        <a class="button is-primary" href="https://www.16personalities.com/free-personality-test">Take the test.</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="field">
                                 <label class="label">What's your favorite development language?</label>
                                 <div class="control">
-                                    <div class="select">
-                                    <select>
-                                        <option>&lt;select-language&gt;</option>
-                                        <option>WebDev</option>
-                                        <option>Python</option>
-                                        <option>C#</option>
-                                        <option>C++</option>
-                                        <option>Asembly Language</option>
-                                        <option>Kotlin</option>
-                                        <option>Lua</option>
-                                    </select>
+                                    <div class="control">
+                                        <input class="input" type="text" placeholder="Enter language here...">
                                     </div>
                                 </div>
                             </div>
-                            <hr>
                         </div>
                         <div class="column is-one-half is-hidden-mobile">
                             <div class="columns is-mobile is-multiline is-centered">
